--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
 #wrapper {
  text-align: center;
  margin: 0 auto;
+ width: 300px;
  padding: 50px 0 0 0;
 }
 h1 {
@@ -48,13 +49,23 @@ p {
 p a {
  color: #b22222;
 }
+.content {
+ font-size: 1.4em;
+ text-align: left;
+}
 </style>
 </head>
 <body>
 <div id="wrapper">
   <h1>hack and tell</h1>
   <h2>show and tell for hackers.</h2>
-  <p>Currently, there's just one: <a href="http://meetup.com/hack-and-tell" title="New York City Hack and Tell">NYC Hack and Tell</a>
-</div>
+    <div class="content">
+      <h3>Where?</h3>
+       <ul>
+         <li><a href="http://meetup.com/hack-and-tell" title="New York City Hack and Tell">NYC Hack and Tell</a></li>
+         <li><a href="http://ftlhackandtell.eventbrite.com/">Fort Lauderdale Hack and Tell</a></li>
+       </ul>
+    </div>
+  </div>
 </body>
 </html>
