--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ p a {
        <ul>
          <li><a href="http://www.meetup.com/hack-and-tell" title="New York City Hack and Tell">NYC Hack and Tell</a></li>
          <li><a href="http://www.meetup.com/silicon-valley-hack-and-tell/" title="Silicon Valley Hack and Tell">Silicon Valley Hack and Tell</a></li>
-         <li><a href="http://www.meetup.com/sflhackandtell/">South Florida Hack and Tell</a></li>
+         <li><a href="http://www.meetup.com/south-florida-hack-and-tell/">South Florida Hack and Tell</a></li>
          <li><a href="http://www.meetup.com/berlin-hack-and-tell" title="Berlin Hack and Tell">Berlin Hack and Tell</a></li>
        </ul>
     </div>
