--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="google-site-verification" content="L7o5VZegDU4pFhdeit-OFQZ5kNcx_r6j9QJR_x2t-rk" />
 <title>hack and tell</title>
 <style type="text/css">
 body {
