Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ p a {
          <li><a href="http://www.meetup.com/silicon-valley-hack-and-tell/" title="Silicon Valley Hack and Tell">Silicon Valley Hack and Tell</a></li>
          <li><a href="http://www.meetup.com/south-florida-hack-and-tell/">South Florida Hack and Tell</a></li>
          <li><a href="http://www.meetup.com/berlin-hack-and-tell" title="Berlin Hack and Tell">Berlin Hack and Tell</a></li>
+         <li><a href="http://www.slashrootcafe.com/hack-and-tell/" title="Hudson Valley Hack and Tell">Hudson Valley Hack and Tell</a></li>
+
+
        </ul>
     </div>
   </div>
